[package]
name = "anchorage"
description = "A stable wrapper (Tokio-Based) around Lavalink in Rust"
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"

[dependencies]
tracing = "^0.1.44"
thiserror = "^2.0.18"
tokio = { version = "1.49.0", features = ["macros"] }
tokio-tungstenite = "^0.28.0"
serde = "^1.0.228"
serde_json = "^1.0.149"
scc = "^3.6.1"
flume = "^0.12.0"
futures = "^0.3.32"
reqwest = { version = "^0.13.2", features = ["query"] }